// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Search Route > POST /search > should apply custom entity transformers 1`] = `
{
  "entities": [
    {
      "access": {
        "content": true,
        "metadata": true,
      },
      "contentLicenseId": null,
      "description": "A test entity",
      "entityType": "http://pcdm.org/models#Collection",
      "id": "http://example.com/entity/1",
      "memberOf": null,
      "metadataLicenseId": null,
      "name": "Test Entity 1",
      "rootCollection": null,
      "searchExtra": {
        "highlight": {},
        "score": 1.5,
      },
      "tested": true,
    },
  ],
  "searchTime": 10,
  "total": 1,
}
`;

exports[`Search Route > POST /search > should fall back to OpenSearch _source when entity not in database (Map View tooltip support) 1`] = `
{
  "entities": [
    {
      "access": {
        "content": true,
        "metadata": true,
      },
      "contentLicenseId": null,
      "description": "A test entity",
      "entityType": "http://pcdm.org/models#Collection",
      "id": "http://example.com/entity/1",
      "memberOf": null,
      "metadataLicenseId": null,
      "name": "Test Entity 1",
      "rootCollection": null,
      "searchExtra": {
        "highlight": {},
        "score": 1.5,
      },
    },
    {
      "access": {
        "content": false,
        "metadata": true,
      },
      "contentLicenseId": "",
      "counts": {
        "collections": 0,
        "files": 0,
        "objects": 0,
      },
      "description": "oral history interview",
      "entityType": "RepositoryObject",
      "id": "http://example.com/entity/2",
      "memberOf": null,
      "metadataLicenseId": "",
      "name": "Interview with Patricia Parker",
      "rootCollection": null,
      "searchExtra": {
        "highlight": {},
        "score": 1.2,
      },
    },
  ],
  "searchTime": 10,
  "total": 2,
}
`;

exports[`Search Route > POST /search > should handle id explicitly set to undefined 1`] = `
{
  "error": {
    "code": "INTERNAL_ERROR",
    "message": "Search failed",
  },
}
`;

exports[`Search Route > POST /search > should handle opensearch errors 1`] = `
{
  "error": {
    "code": "INTERNAL_ERROR",
    "message": "Search failed",
  },
}
`;

exports[`Search Route > POST /search > should perform basic search successfully 1`] = `
{
  "entities": [
    {
      "access": {
        "content": true,
        "metadata": true,
      },
      "contentLicenseId": null,
      "description": "A test entity",
      "entityType": "http://pcdm.org/models#Collection",
      "id": "http://example.com/entity/1",
      "memberOf": null,
      "metadataLicenseId": null,
      "name": "Test Entity 1",
      "rootCollection": null,
      "searchExtra": {
        "highlight": {
          "name": [
            "<em>Test</em> Entity 1",
          ],
        },
        "score": 1.5,
      },
    },
    {
      "access": {
        "content": true,
        "metadata": true,
      },
      "contentLicenseId": null,
      "description": "Another test entity",
      "entityType": "http://pcdm.org/models#Object",
      "id": "http://example.com/entity/2",
      "memberOf": null,
      "metadataLicenseId": null,
      "name": "Test Entity 2",
      "rootCollection": null,
      "searchExtra": {
        "highlight": {
          "description": [
            "Another <em>test</em> entity",
          ],
        },
        "score": 1.2,
      },
    },
  ],
  "facets": {
    "entityType": [
      {
        "count": 1,
        "name": "http://pcdm.org/models#Collection",
      },
      {
        "count": 1,
        "name": "http://pcdm.org/models#Object",
      },
    ],
  },
  "searchTime": 10,
  "total": 2,
}
`;

exports[`Search Route > POST /search > should return null for memberOf/rootCollection when parent entity not found 1`] = `
{
  "entities": [
    {
      "access": {
        "content": true,
        "metadata": true,
      },
      "contentLicenseId": "https://creativecommons.org/licenses/by/4.0/",
      "description": "Entity with missing parent",
      "entityType": "http://pcdm.org/models#Object",
      "id": "http://example.com/entity/1",
      "memberOf": null,
      "metadataLicenseId": "https://creativecommons.org/licenses/by/4.0/",
      "name": "Test Entity 1",
      "rootCollection": null,
      "searchExtra": {
        "score": 1.5,
      },
    },
  ],
  "searchTime": 10,
  "total": 1,
}
`;
